added home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <div class="wrapper">
   <mt-header></mt-header>
   <!-- Full Width Column -->
+  
   <div class="content-wrapper">
-    <div class="container">
 
-      {{content}}
-
-    </div>
+    <mt-home></mt-home>
+  
   </div>
 
   <!-- snakbar deve ser aqui -->
