--- a/src/app/restaurant-detail/menu/menu.component.html
+++ b/src/app/restaurant-detail/menu/menu.component.html
@@ -2,10 +2,10 @@
  <div class="col-md-9 col-xs-12" *ngFor="let item of menu | async" >
 
     <mt-menu-item [menuItem]="item"
-      (add)="addMenuItem($event)"></mt-menu-item>
+      (add)="shoppingCart.addItem($event)"></mt-menu-item>
 
 </div>
 <div class="col-md-3 col-xs-12">
-  <mt-shopping-cart></mt-shopping-cart>
+  <mt-shopping-cart #shoppingCart></mt-shopping-cart>
 </div>
 <!-- FIM DO MENU -->
