--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -21,30 +21,19 @@
                 <p class="lead">Endereço de Entrega:</p>
               </div>
               <div class="col-sm-6 col-xs-12">
-                <div class="form-group" [class.has-success]="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"
-                                        [class.has-error]="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
-                  <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Endereço</label>
-                  <input type="text" class="form-control" #iptAddress="ngModel" name="address" ngModel id="inputSuccess" placeholder="Endereço" required autocomplete="off" minlength=5>
-                  <span class="help-block" *ngIf="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-remove"></i>Campo obrigatório</span>
-                  <span class="help-block" *ngIf="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-check"></i>OK</span>
-                </div>
+                <mt-input-container errorMessage="Campo Obrigatório com pelo menos 5 char" label="Endereço" >
+                  <input class="form-control" name="address" ngModel required autocomplete="off" minlength=5 placeholder="Endereço">
+                </mt-input-container>
               </div>
               <div class="col-sm-2 col-xs-6">
-                <div class="form-group" [class.has-success]="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"
-                                        [class.has-error]="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)">
-
-                  <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Número</label>
-                  <input type="text" class="form-control" name="number" #iptNumber="ngModel" ngModel id="inputSuccess" placeholder="Número" required autocomplete="off">
-                  <span class="help-block" *ngIf="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-remove"></i>Campo obrigatório</span>
-                  <span class="help-block" *ngIf="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-check"></i>OK</span>
-                </div>
+                <mt-input-container errorMessage="Campo Obrigatório" label="Número" >
+                  <input class="form-control" name="number" ngModel required autocomplete="off" placeholder="Número">
+                </mt-input-container>
               </div>
               <div class="col-sm-4 col-xs-6">
-                <div class="form-group" [class.has-success]="iptComplement.dirty">
-                  <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Complemento</label>
-                  <input type="text" #iptComplement="ngModel" class="form-control" name="optional" ngModel id="inputSuccess" placeholder="Complemento">
-                  <span class="help-block" *ngIf="iptComplement.dirty"><i class="fa fa-check"></i>OK</span>
-                </div>
+                <mt-input-container label="Complemento">
+                  <input class="form-control" name="optional" ngModel autocomplete="off" placeholder="Complemento">
+                </mt-input-container>
 
               </div>
               <!-- /.col -->
