--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -25,12 +25,12 @@
                   <input class="form-control" name="address" ngModel required autocomplete="off" minlength=5 placeholder="Endereço">
                 </mt-input-container>
               </div>
-              <div class="col-sm-2 col-xs-6">
-                <mt-input-container errorMessage="Campo Obrigatório" label="Número" >
-                  <input class="form-control" name="number" ngModel required autocomplete="off" placeholder="Número">
+              <div class="col-sm-3 col-xs-6">
+                <mt-input-container errorMessage="Campo Obrigatório e somente números" label="Número" >
+                  <input class="form-control" name="number" ngModel required autocomplete="off" placeholder="Número" pattern="^[0-9]*$">
                 </mt-input-container>
               </div>
-              <div class="col-sm-4 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <mt-input-container label="Complemento">
                   <input class="form-control" name="optional" ngModel autocomplete="off" placeholder="Complemento">
                 </mt-input-container>
